<resources>
    <string name="app_name">TravelAplication</string>
    <string name="beautifull_image">Beautifull Image</string>
    <string name="happy_holidays">Happy Holidays !</string>
    <string name="heart_text">Have yourself a merry little Christmas,  \n Let your heart be light  \n From now on ,our troubles will be out of sight</string>
    <string name="let_it_snow">Let it Snow</string>
    <string name="gingles_bells">Gingles bells</string>
    <string name="Trip">Trip Name</string>
    <string name="Dest">Destination</string>
    <string name="Type">Trip Type</string>
    <string name="add_travel">Add travel</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="addimage">AddImage</string>
    <string name="save">Save</string>
    <string name="rating">Rating</string>
    <string name="dd_mm_yyyy">DD/MM/YYYY</string>
</resources>
